<resources>
    <string name="app_name">Amersur App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nombre_propiedad"> - </string>
    <string name="area_propiedad"> - </string>
    <dimen name="espaciado_entre_items">5dp</dimen>
    <string-array name="ubicaciones">
        <item>Seleccionar</item>
        <item>Huaral</item>
        <item>Chancay</item>
    </string-array>

    <string-array name="tipo">
        <item>Seleccionar</item>
        <item>Casa</item>
        <item>Terreno</item>
    </string-array>

    <string name="det_nombre_propiedad"> - </string>
    <string name="det_area_propiedad"> - </string>
    <string name="det_estado_propiedad"> - </string>
    <string name="det_tipo_propiedad"> - </string>
    <string name="det_ubicacion_propiedad"> - </string>
    <string name="det_descripcion_propiedad"> - </string>
    <string name="det_precio_propiedad"> - </string>

</resources>