<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".propiedades.DetallePropiedad">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/det_img_propiedad"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="30dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/det_nombre_propiedad"
                android:text="@string/det_nombre_propiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="28sp"
                android:textColor="#14252B"/>

            <TextView
                android:id="@+id/det_desc_propiedad"
                android:text="@string/det_descripcion_propiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="#6A6A6A"
                android:textSize="14sp"/>

            <TextView
                android:text="Ubicación:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A6A6A"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/det_ubi_propiedad"
                android:text="@string/det_ubicacion_propiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="#6A6A6A"
                android:textSize="14sp"/>

            <TextView
                android:text="Estado:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A6A6A"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/det_estado_propiedad"
                android:text="@string/det_estado_propiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="#6A6A6A"
                android:textSize="14sp"/>

            <TextView
                android:text="Área:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A6A6A"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/det_area_propiedad"
                android:text="@string/det_area_propiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="#6A6A6A"
                android:textSize="14sp"/>

            <TextView
                android:text="Desde:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A6A6A"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/det_precio_propiedad"
                android:text="@string/det_precio_propiedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textColor="#6A6A6A"
                android:textSize="14sp"/>

            <TextView
                android:text="¿Estás interesado(a)?"
                android:textColor="#6A6A6A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/mas_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="#A9B72C"
                android:text="SOLICITAR MÁS INFORMACIÓN"
                android:textColor="#fff"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>